--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span id="thisyear"></span>年 は <span id="pastdays"></span>
         が経過しました。
       </h1>
-      <h1>残り <span id="leftdays"></span> です。</h1>
+      <h1>残り <span id="lefttime"></span> です。</h1>
       <div id="chartContainer">
         <canvas id="chart"></canvas>
         <!-- <div id="chartYear">2022</div> -->
