--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Days Left in the Year</title>
+    <link rel="stylesheet" href="/css/destyle.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div class="container">
-      <h1>
+      <div class="text">
         <span id="thisyear"></span>年 は <span id="pastdays"></span>
         が経過しました。
-      </h1>
-      <h1>残り <span id="lefttime"></span> です。</h1>
+      </div>
+      <div class="text">残り <span id="leftdays"></span> です。</div>
       <div id="chartContainer">
         <canvas id="chart"></canvas>
         <!-- <div id="chartYear">2022</div> -->
