[add] テキスト表示を全てJavaScriptの制御に変更

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <body>
     <div class="container">
       <div class="text">
-        <span id="thisyear"></span>年 は <span id="pastdays"></span>
-        が経過しました。
+        <div id="pasttime"></div>
+        <div id="lefttime"></div>
       </div>
-      <div class="text">残り <span id="leftdays"></span> です。</div>
       <div id="chartContainer">
         <canvas id="chart"></canvas>
         <!-- <div id="chartYear">2022</div> -->
