[update] グラフの再描画をcanvasの再生成に変更

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
         <div id="pasttime"></div>
         <div id="lefttime"></div>
       </div>
-      <div id="chartContainer">
-        <canvas id="chart"></canvas>
-        <!-- <div id="chartYear">2022</div> -->
-      </div>
+      <div id="chartContainer"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
